--- a/src/components/wrappers/portfolio-page/portfolio-page.scss
+++ b/src/components/wrappers/portfolio-page/portfolio-page.scss
@@ -3,7 +3,7 @@
 .page-wrapper {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
 }
 
 .page-wrapper__content {
